Updated POM to have correct Name for Artifact

--- a/mule-jenkins-pipeline/pom.xml
+++ b/mule-jenkins-pipeline/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>mule-jenkins-pipeline</artifactId>
+	<artifactId>mule-jenkins-pipeline-wsrd</artifactId>
 	<version>1.0.0</version>
 	<packaging>mule-application</packaging>
 
@@ -21,6 +21,12 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.mule.tools.maven</groupId>
+				<artifactId>mule-app-maven-plugin</artifactId>
+				<version>1.1</version>
+				<extensions>true</extensions>
+			</plugin>
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule-maven-plugin</artifactId>
