--- a/mule-jenkins-pipeline/pom.xml
+++ b/mule-jenkins-pipeline/pom.xml
@@ -39,12 +39,17 @@
 						<password>${password}</password>
 						<applicationName>${project.artifactId}</applicationName>
 						<environment>${environment}</environment>
+                        <businessGroup>MuleSoft-DanHenryMuley</businessGroup>
+                        <region>us-west-2</region>
+                        <workerType>${cloudhubworkerType}</workerType>
+                        <workers>${cloudhubWorkers}</workers>
 					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
 				</configuration>
 			</plugin>
 		</plugins>
 	</build>
+	
 
 	<dependencies>
 		<dependency>
