--- a/mule-jenkins-pipeline/Jenkinsfile
+++ b/mule-jenkins-pipeline/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline{
  	stage ('Deploy'){
  		steps {
  			withMaven(maven:'maven'){
- 				sh 'mvn -f mule-jenkins-pipeline/pom.xml package deploy  -Dusername=$ANYPOINT_USR -Dpassword=$ANYPOINT_PSW -Denvironment=Sandbox -DmuleDeploy -Dbusinessgroup=MuleSoft-DanHenryMuley -DcloudhubworkerType=Micro -DcloudhubWorkers=1 -X' 
+ 				sh 'mvn -f mule-jenkins-pipeline/pom.xml package deploy  -Dusername=$ANYPOINT_USR -Dpassword=$ANYPOINT_PSW -Denvironment=Sandbox -DmuleDeploy -Dbusinessgroup=MuleSoft-DanHenryMuley -Dregion=eu-west-2 -DcloudhubworkerType=Micro -DcloudhubWorkers=1 -X' 
  			}
  		}
  	}
