--- a/mule-jenkins-pipeline/pom.xml
+++ b/mule-jenkins-pipeline/pom.xml
@@ -40,7 +40,7 @@
 						<applicationName>${project.artifactId}-wrse</applicationName>
 						<environment>${environment}</environment>
                         <businessGroup>${businessgroup}</businessGroup>
-                        <region>eu-west-2</region>
+                        <region>${region}</region>
                         <workerType>${cloudhubworkerType}</workerType>
                         <workers>${cloudhubWorkers}</workers>
 					</cloudHubDeployment>
