Updated Build POM location

--- a/mule-pipeline-demo/Jenkinsfile
+++ b/mule-pipeline-demo/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline{
  	stage ('Build'){
  		steps {
  			withMaven(maven:'maven'){
- 				sh 'mvn -f mule-jenkins-pipeline/pom.xml clean install'
+ 				sh 'mvn -f mule-pipeline-demo/pom.xml clean install'
  			}
  		}
  	}
